Told You! Trying to add tags automatically

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 
             <section id="categories" class="section categories-section">
                 <div class="container">
-                    <p class="eyebrow">Categories</p>
-                    <h2 class="section-title">Explore by mood and style.</h2>
+                    <p class="eyebrow">Featured Categories</p>
+                    <h2 class="section-title">Explore Our Featured Categories.</h2>
                     <p class="categories-copy">
-                        Pick a category to open only those photos in the
-                        gallery.
+                        These are highlighted picks. More categories are
+                        available inside the gallery filters.
                     </p>
                     <div id="category-grid" class="category-grid">
                         <!-- Category cards injected by js/home-categories.js -->
