Fixed bugs, added dark mode

--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
         <header class="header">
             <nav class="nav">
                 <a href="#home" class="logo">MBAMotria</a>
+                <ul id="site-nav-links" class="nav-links">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="gallery.html">Gallery</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#team">Team</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                <button
+                    class="theme-toggle"
+                    type="button"
+                    aria-label="Toggle dark mode"
+                >
+                    Dark
+                </button>
                 <button
                     class="nav-toggle"
                     type="button"
@@ -33,14 +47,6 @@
                     <span></span>
                     <span></span>
                 </button>
-                <ul id="site-nav-links" class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="gallery.html">Portfolio</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#team">Team</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-                <a class="nav-cta" href="gallery.html">Open Gallery</a>
             </nav>
         </header>
 
@@ -84,7 +90,9 @@
             <section id="categories" class="section categories-section">
                 <div class="container">
                     <p class="eyebrow">Featured Categories</p>
-                    <h2 class="section-title">Explore Our Featured Categories.</h2>
+                    <h2 class="section-title">
+                        Explore Our Featured Categories.
+                    </h2>
                     <p class="categories-copy">
                         These are highlighted picks. More categories are
                         available inside the gallery filters.
@@ -299,6 +307,7 @@
         <script src="js/categories.js"></script>
         <script src="js/home-categories.js"></script>
         <script src="js/contact-mail.js"></script>
+        <script src="js/theme.js"></script>
         <script src="js/nav.js"></script>
         <script src="js/page-transition.js"></script>
         <script>
