--- a/gallery.html
+++ b/gallery.html
@@ -21,6 +21,16 @@
         <header class="header">
             <nav class="nav">
                 <a href="index.html#home" class="logo">MBAMotria</a>
+                <ul id="site-nav-links" class="nav-links">
+                    <li><a href="index.html#home">Home</a></li>
+                    <li><a href="#work">Gallery</a></li>
+                    <li><a href="index.html#about">About</a></li>
+                    <li><a href="index.html#team">Team</a></li>
+                    <li><a href="index.html#contact">Contact</a></li>
+                </ul>
+                <button class="theme-toggle" type="button" aria-label="Toggle dark mode">
+                    Dark
+                </button>
                 <button
                     class="nav-toggle"
                     type="button"
@@ -32,13 +42,6 @@
                     <span></span>
                     <span></span>
                 </button>
-                <ul id="site-nav-links" class="nav-links">
-                    <li><a href="index.html#home">Home</a></li>
-                    <li><a href="#work">Portfolio</a></li>
-                    <li><a href="index.html#about">About</a></li>
-                    <li><a href="index.html#contact">Contact</a></li>
-                </ul>
-                <a class="nav-cta" href="index.html#contact">Contact</a>
             </nav>
         </header>
 
@@ -92,6 +95,7 @@
         </footer>
 
         <script src="js/categories.js"></script>
+        <script src="js/theme.js"></script>
         <script src="js/nav.js"></script>
         <script src="js/page-transition.js"></script>
         <script src="js/gallery.js"></script>
