Fixed typo, increased grayscale

--- a/index.html
+++ b/index.html
@@ -72,18 +72,18 @@
 
             <section class="proof-strip">
                 <div class="container proof-grid">
-                    <article class="proof-card">
+                    <a href="#team"><article class="proof-card">
                         <p class="proof-number">2</p>
                         <p class="proof-label">Team Members</p>
-                    </article>
-                    <article class="proof-card">
+                    </article></a>
+                    <a href="#team"><article class="proof-card">
                         <p class="proof-number">1</p>
                         <p class="proof-label">Shared Vision</p>
-                    </article>
-                    <article class="proof-card">
+                    </article></a>
+                    <a href="#team"><article class="proof-card">
                         <p class="proof-number">∞</p>
                         <p class="proof-label">Learning Through Photos</p>
-                    </article>
+                    </article></a>
                 </div>
             </section>
 
